<resources>
    <string name="app_name">BKDana</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard2">DashboardActivity2</string>
    <string name="title_menu">Menu</string>
    <string name="title_home">Dashboard</string>
    <string name="title_dashboard">Transaksi</string>
    <string name="title_notifications">Top Up</string>
    <string name="title_tark_tunai">Tarik Tunai</string>
    <string name="title_activity_menu_kiri">menu_kiri</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="beberapa_langkah_lagi_untuk_menjadi_peminjam_di_bkdana_silahkan_lengkapi_informasi_dan_data_data_anda_terlebih_dahulu">Beberapa langkah lagi untuk menjadi peminjam di BKDana. Silahkan lengkapi informasi dan data-data Anda terlebih dahulu.</string>
    <string-array name="register_type">
        <item>Pendana</item>
        <!--<item>Peminjam Kilat</item>-->
        <item>Peminjam Mikro</item>
        <item>Peminjam Agri</item>
    </string-array>

    <string name="pilih">-- PILIH --</string>
    <string name="saya_telah_membaca_dan_saya_setuju_dengan_kebijakan_privasi_syarat_ketentuan"><![CDATA[Saya telah membaca dan saya setuju dengan kebijakan Privasi & Syarat Ketentuan]]></string>
    <string name="informasi_usaha_silahkan_masukan_data_diri_anda_sebenar_benarnya">Informasi Usaha\nSilahkan masukan data diri Anda sebenar - benarnya.</string>
    <string name="upload_dokumen_upload_dokumen_dokumen_anda_sebagai_tolak_ukur_kredit_skor_anda">Upload Dokumen\nUpload dokumen - dokumen Anda sebagai tolak ukur kredit skor anda.</string>
    <string name="deskripsi_pribadi_silahkan_masukan_data_diri_anda_sebenar_benarnya">Deskripsi Pribadi\nSilahkan masukan data diri Anda sebenar - benarnya.</string>
    <string-array name="array_gender">
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>
    <string name="FACEBOOK_APP_ID">617243342038126</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">27ef9cc687b9f3ebdcaef2923c78e412</string>
    <string name="update">Update</string>
    <string name="catatan_saldo_anda_akan_dikurangi_tagihan_anda_jika_menekan_tombol_submit_jika_saldo_anda_tidak_mencukupi_harap_segera_melakukan_b_top_up_b_terlebih_dahulu"><![CDATA[* Catatan : Saldo Anda akan dikurangi tagihan Anda jika menekan tombol Submit. JIka saldo Anda tidak mencukupi harap segera melakukan</b> Top Up </b> terlebih dahulu.]]></string>
</resources>
