<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/title_menu" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_transaksi"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_topup"
        android:icon="@drawable/ic_topup"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_tarik"
        android:icon="@drawable/ic_tarik_tunai"
        android:title="@string/title_tark_tunai" />

</menu>
