<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".modules.daftar.kilat.DaftarUploadKilatActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:id="@+id/appBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:layout_marginTop="?actionBarSize"
                android:text="@string/beberapa_langkah_lagi_untuk_menjadi_peminjam_di_bkdana_silahkan_lengkapi_informasi_dan_data_data_anda_terlebih_dahulu"
                android:textColor="@android:color/white"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:title="Daftar BKDana Kilat"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextAppearance="@style/Toolbar.TitleBug"
                app:subtitleTextAppearance="@style/Toolbar.SubTitleText"/>



        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informasi_usaha_silahkan_masukan_data_diri_anda_sebenar_benarnya"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:layout_marginBottom="18dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Deskripsi Usaha"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etDeskripsi"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Info Usaha"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/bg_dash">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:id="@+id/imgFoto"
                        android:layout_margin="9dp"
                        android:src="@drawable/ic_default_profile"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/llFoto">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/ic_menu_upload"
                            android:layout_gravity="center"
                            android:layout_margin="9dp"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:background="@drawable/btn_purpel_rounded"
                            android:textColor="@android:color/white"
                            android:text="Browse file"
                            android:paddingLeft="9dp"
                            android:paddingRight="9dp"
                            android:layout_gravity="center"
                            android:id="@+id/btnFoto"
                            />
                    </LinearLayout>

                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="- Foto usaha bisa minimal 5 foto"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:layout_margin="9dp"
                android:text="* Info Financial usaha"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="-Omzet Usaha"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etOmzet"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="- Modal"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etModal"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="- Margin"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etMargin"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="- Biaya Operasional"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etOperasional"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="- Laba usaha untuk 3-12 bl terakhir"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etLaba"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="- Jumlah Bunga"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etBunga"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Bank"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_fill"
                    android:id="@+id/spBank"
                    android:entries="@array/array_gender"
                    android:prompt="@string/pilih"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="- Ada analisa scoring dari data-data yang dikirim"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etScoring"
                    />

            </LinearLayout>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18sp"
                android:layout_marginBottom="9dp">
                <CheckBox
                    android:id="@+id/cbTnC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="@string/saya_telah_membaca_dan_saya_setuju_dengan_kebijakan_privasi_syarat_ketentuan"/>
            </TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:textColor="@android:color/white"
                android:text="Selanjutnya"
                android:id="@+id/btnSelanjutnya"
                android:background="@drawable/btn_purpel_rounded"
                />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>