<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".modules.daftar.kilat.DaftarUploadKilatActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:id="@+id/appBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:layout_marginTop="?actionBarSize"
                android:text="@string/beberapa_langkah_lagi_untuk_menjadi_peminjam_di_bkdana_silahkan_lengkapi_informasi_dan_data_data_anda_terlebih_dahulu"
                android:textColor="@android:color/white"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:title="Daftar BKDana Kilat"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextAppearance="@style/Toolbar.TitleBug"
                app:subtitleTextAppearance="@style/Toolbar.SubTitleText"/>



        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Informasi Pribadi
Silahkan masukan data diri Anda sebenar - benarnya."
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:layout_marginBottom="18dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Upload Foto"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/bg_dash">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:id="@+id/imgFoto"
                        android:layout_margin="9dp"
                        android:src="@drawable/ic_default_profile"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:id="@+id/llFoto">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/ic_menu_upload"
                            android:layout_gravity="center"
                            android:layout_margin="9dp"/>
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:background="@drawable/btn_purpel_rounded"
                            android:textColor="@android:color/white"
                           android:src="@android:drawable/ic_menu_camera"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:layout_gravity="center"
                            android:id="@+id/btnFoto"
                            />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Pekerjaan"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_fill"
                    android:id="@+id/spPekerjaan"
                    android:entries="@array/array_gender"
                    android:prompt="@string/pilih"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Nomor NIK"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etNomorNIK"
                    />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="* Uplad NIK File"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/bg_dash">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:id="@+id/imgKTP"
                    android:layout_margin="9dp"
                    android:src="@drawable/ic_default_profile"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:id="@+id/llNIK">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_menu_upload"
                        android:layout_gravity="center"
                        android:layout_margin="9dp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:background="@drawable/btn_purpel_rounded"
                        android:textColor="@android:color/white"
                        android:text="Browse file"
                        android:paddingLeft="9dp"
                        android:paddingRight="9dp"
                        android:layout_gravity="center"
                        android:id="@+id/btnNIK"
                        />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Nomor Rekening"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etRekening"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Usaha"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etUsaha"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Uplad Foto Usaha"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/bg_dash">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:id="@+id/imgUsaha"
                        android:layout_margin="9dp"
                        android:src="@drawable/ic_default_profile"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:id="@+id/llUsaha">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/ic_menu_upload"
                            android:layout_gravity="center"
                            android:layout_margin="9dp"/>
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:background="@drawable/btn_purpel_rounded"
                            android:textColor="@android:color/white"
                            android:paddingLeft="9dp"
                            android:paddingRight="9dp"
                            android:layout_gravity="center"
                            android:src="@android:drawable/ic_menu_camera"
                            android:id="@+id/btnUsaha"
                            />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Lama Usaha"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etLamaUsaha"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="* Jumlah Pinjaman (Rp)"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:background="@drawable/bg_edit_text"
                    android:id="@+id/etPinjaman"
                    />

            </LinearLayout>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_marginBottom="9dp">
                <CheckBox
                    android:id="@+id/cbTnC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="@string/saya_telah_membaca_dan_saya_setuju_dengan_kebijakan_privasi_syarat_ketentuan"/>
            </TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:textColor="@android:color/white"
                android:text="Selanjutnya"
                android:id="@+id/btnSelanjutnya"
                android:background="@drawable/btn_purpel_rounded"
                />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>